# code-server-spawner

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.template  Makefile  README.md  app.db  crontab  docker-compose.yaml  docker-stack.yaml  entrypoint.sh  justfile  mypi.ini  pyproject.toml  requirements.txt  supervisord.conf
.clasi/: .clasi.db  clasi-version  config.yaml
.clasi/design/: overview.md
.clasi/issues/: admin-delete-user.md  admin-nodes-tab-manual-swarm-node-management.md  dotconfig-migration.md  fixing-novnc-timeouts.md  instructor-cluster-presize.md  multi-size-node-provisioning.md  node-autoscaling-control-loop.md  purge-secrets-from-git-history.md
.claude/rules/: source-code.md
clasi/issues/: expand-tier-labels-never-stamp.md  nodeop-orphaned-on-container-restart.md  pin-codehosts-to-node-no-migration.md  stale-swarm-node-references-break-host-operations.md
config/: config.env  deploy.env  devel.env  develdb.env  docker.env  dockerdev.env  dotconfig.yaml  gunicorn_config.py  known_hosts  local-prod.env  manager-setup-swarm.sh  prod.env
config/cloud-init/: ssh-firewall.yaml  swarm-node-init-v1.yaml  swarm-node-init-v2.yaml
config/devel/: public.env  secrets.env
config/hooks/: version_bump
config/host-scripts/: firewall.sh  manager-setup-swarm.sh
config/local-prod/: public.env  secrets.env
config/prod/: id_rsa  public.env  secrets.env
config/secrets/: client_secret_1059904057121-hqt0tneptjf95td13ljlulaq8is9gg0v.apps.googleusercontent.com.json  deploy.env  devel.env  docker.env  dockerdev.env  id_rsa  id_rsa.pub  local-prod.env  prod.env
cron-app/: Dockerfile  cron-app.env  crontab  entrypoint.sh  run-app.sh
cspawn/: __main__.py  __version__.py  app.py  apptypes.py  config.py  control.py  db.py  forms.py  init.py  models.py  telemetry.py  test_fixture.py  util.py
cspawn/admin/: __init__.py  routes.py  teardown.py
cspawn/auth/: __init__.py  _old_auth.py  forms.py  models.py  oauth_store.py  routes.py
cspawn/classes/: __init__.py
cspawn/cli/: __main__.py  config.py  ctl.py  db.py  devel.py  fs.py  github.py  host.py  node.py  probe.py  root.py  sys.py  telem.py  test.py  util.py
cspawn/cs_docker/: autoscale.py  csmanager.py  manager.py  proc.py  tiers.py
cspawn/cs_github/: repo.py
cspawn/docker/: __init__.py  csmanager.py  db.py  keyrate.py  manager.py  models.py  proc.py
cspawn/hosts/: __init__.py  control.py  hosts.py  (+3 more)
data/: Makefile  backup.tar  export.json  images.json  protos.json  setup-database.sql  users.json
docker/: Dockerfile  Makefile  crontab  docker-compose-caddy.yaml  docker-compose-db.yaml  docker-compose.yaml  docker-stack-db.yaml  docker-stack.yaml  entrypoint.sh  gunicorn_config.py  pgadmin-servers.json  ssh-config
docs/: devel_setup.md  docker_cheats.md  golden-node-snapshot.md  security_api_tokens.md
flask-app/: .dockerignore  Dockerfile  Makefile  README.md  app.py  cron.py  db.py  entrypoint.sh  gunicorn_config.py  pyproject.toml  requirements.txt  routes.py
flask-app/config/: config.env  devel.env  prod.env
flask-app/secrets/: devel.env  develx.env  production.env
flask-app/static/: styles.css
flask-app/templates/: _messages.html  hello_world.html  index.html  page.html  private-admin.html  private-staff.html  private.html  public.html
migrations/: env.py
nginx/: .htpasswd  Dockerfile  entrypoint.sh  nginx.conf
node-config/: Makefile  id_rsa  id_rsa.pub  inventory.ini  setup_nfs_mount.yaml  swarm_nodes.yaml  swarm_nodes_fw.yaml
scripts/: build-golden-node-snapshot.sh
secrets/: .keep  client_secret_1059904057121-89jb14pkabege0usq5bcjn6o3mr6hil7.apps.googleusercontent.com.json  client_secret_1059904057121-hqt0tneptjf95td13ljlulaq8is9gg0v.apps.googleusercontent.com.json  devel.env  develx.env  prod.env  secret.env
sql/: recreate_db.sql
test/: conftest.py  fixtures.py  pytest.ini  start_many.sh  test_admin_coverage.py  test_admin_nodes_routes.py  test_admin_nodes_template.py  test_auth.py  test_auth_username_case.py  test_auth_username_case_simple.py  test_autoscale.py  test_class_purge_window_schema.py  test_classes.ipynb  test_cli_stop_paths.py  test_cluster_detail_page.py  test_cluster_route.py  test_config.py  test_csmanager_pin.py  test_docker.ipynb  test_end_to_end_simulation.py  test_export.py  test_find_username.py  test_fix_validation.py  test_hosts.ipynb  test_hosts.py  test_misc.ipynb  test_misc.py  test_node_autoscale_cmd.py  test_node_backfill.py  test_node_cloud_init.py  test_node_contract.py  test_node_labels.py  test_node_missing.py  test_node_op_cli.py  test_node_op_model.py  test_node_op_sweep.py  test_node_provisioning_verify.py  test_node_rebalance.py  test_node_unpin.py  test_stale_node_consumers.py  (+8 more)
(+312 files in other folders)
