[project]
name = "cspawn"
version = "1.20250514.1"
description = "Manages code server containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.4.1",
    "click>=8.1.8",
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gevent>=24.11.1",
    "gunicorn>=23.0.0",
    "humanize>=4.11.0",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "sqlalchemy-utils>=0.41.2",
    "sqlitedict>=2.1.0",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "cspawn",
    "passlib>=1.7.4",
    "flask-dance>=7.1.0",
    "flask-migrate>=4.1.0",
    "faker>=36.1.0",
    "bootstrap-flask>=2.4.1",
    "font-awesome-flask>=0.1.4",
    "docker>=7.1.0",
    "paramiko>=3.5.1",
    "python-slugify>=8.0.4",
    "bcrypt>=4.2.1",
    "tzlocal>=5.3.1",
    "flask-pymongo>=3.0.1",
    "python-digitalocean>=1.17.0",
    "minio>=7.2.16",
    "pygithub>=2.8.1",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"  # Use double quotes for consistency
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = true  # Prevent forced new lines for lists


[tool.setuptools.packages.find]
where = ["."]
include = ["cspawn*"]  # Include all subpackages


[dependency-groups]
dev = [
    "ansible>=11.2.0",
    "flake8>=7.1.2",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
]


[project.scripts]
cspawnctl = "cspawn.cli.ctl:cli"
