[project]
name = "code-server-spawner"
version = "0.1.0"
description = "Manages code server containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-httpauth>=4.8.0",
    "flask-login>=0.6.3",
    "flask-pymongo>=2.3.0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gevent>=24.11.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.5",
    "jtlutil>=0.1.1",
    "python-dotenv>=1.0.1",
    "sqlitedict>=2.1.0",
]
